  * Make amd64 consitently use initramfs images.
  * Drop 2.4 support for i386.
  * Merge most differences between i386 and amd64 configs. Only remaining
    difference is that floppy support is still desirable (though not
    present) for i386.

  [ Martin Michlmayr ]
  * Switch arm to 2.6.17-2.
  * Clean-up arm config now that 2.4 is gone.

 -- Joey Hess <joeyh@debian.org>  Thu, 10 Aug 2006 13:27:22 -0400

debian-installer (20060806) unstable; urgency=low

  * Add ttf-bpg-georgian fonts for graphical installer.
  * As that was the last missing font udeb, remove support for including
    fontfiles from tarballs.
  * Remove 2.4 images for sparc.
  * Update arches in build depends for module-init-tools and modutils.

 -- Frans Pop <fjp@debian.org>  Mon,  6 Aug 2006 23:22:02 +0200

debian-installer (20060726.1) unstable; urgency=low

  * pkg-lists/exclude: update to libnewt0.52.
  * Add build dependency on wget for arches that support the graphical
    installer; this is needed while we still have font tarballs.

 -- Frans Pop <fjp@debian.org>  Wed, 26 Jul 2006 13:54:56 +0200

debian-installer (20060726) unstable; urgency=low

  [ Martin Michlmayr ]
  * Make sure the Netwinder image doesn't exceed NeTTrom's size limit.
    Closes: #345319.
  * Include essential kernel modules on the Netwinder cdrom initrd.
  * Fix a typo in the Cobalt preseed file.
  * Rename sb1-swarm-bn to sb1-bcm91250a for consistency.
  * Add 2.6 images on mips and mipel.
  * Add support for the Broadcom BCM91480B evaluation board (aka "BigSur").
  * Add support for the SGI O2 (IP32) machines (with R5000 CPU).
  * Put beep-udeb on the NSLU2 initrd so we can notify people when SSH is
    ready.
  * Switch to 2.6.16 kernel on arm.
  * Put the input-modules udeb on the NSLU2 image so the beeper will work.
  * Remove (incomplete) LART and BAST support.
  * Remove 2.4 images on arm.

  [ Joey Hess ]
  * Split off PRESEED_SUITE from PRESEED, use this for the suite setting