@@ -10,7 +10,7 @@ MANIFEST-BOOT = "tftp boot image for netwinder"
 
 .PHONY: arch_boot
 arch_boot:
-	util/arm/mknettrom.pl $(TEMP_KERNEL) $(TEMP_INITRD) > $(TEMP_BOOT)
+	mknettrom $(TEMP_KERNEL) $(TEMP_INITRD) > $(TEMP_BOOT)
 	# Make sure the image doesn't exceed NeTTrom's size limit
 	util/arm/netwinder/check-image-size $(TEMP_BOOT)
 
