@@ -11,6 +11,7 @@ debian-installer (20060807) UNRELEASED; urgency=low
   [ Martin Michlmayr ]
   * Switch arm to 2.6.17-2.
   * Clean-up arm config now that 2.4 is gone.
+  * Use mknettrom from the nwutil package instead of our local copy.
 
  -- Joey Hess <joeyh@debian.org>  Thu, 10 Aug 2006 13:27:22 -0400
 
